<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:scaleType="fitCenter"
        android:src="@drawable/back_edu" />

    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.7"
        android:background="#fff"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:visibility="gone">

            <RelativeLayout
                android:id="@+id/rytAddressSource"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/_8sdp">

                <ImageView
                    android:id="@+id/backArrow"
                    android:layout_width="@dimen/_15sdp"
                    android:layout_height="@dimen/_15sdp"
                    android:layout_alignParentLeft="true"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ic_cancel" />

                <com.appstar.tutionportal.views.MyTextView
                    android:id="@+id/txtLocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="@dimen/_15sdp"
                    android:gravity="right"
                    android:text="SIGN-UP"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/_10sdp"
                    android:textStyle="bold" />

            </RelativeLayout>
        </android.support.design.widget.AppBarLayout>

        <LinearLayout
            android:layout_width="@dimen/_250sdp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/_45sdp"
                android:layout_height="@dimen/_45sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_20sdp"
                android:src="@drawable/ic_logo" />


            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="left|center"
                android:hint="@string/fname"
                android:inputType="textCapSentences"
                android:textColor="@color/hint_color"
                android:textColorHint="@color/hint_color"
                android:textSize="@dimen/_10sdp" />

            <EditText
                android:id="@+id/etLastName"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="left|center"
                android:hint="@string/lname"
                android:inputType="textCapSentences"
                android:textColor="@color/hint_color"
                android:textColorHint="@color/hint_color"
                android:textSize="@dimen/_10sdp" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="left|center"
                android:hint="@string/email"
                android:maxLines="1"
                android:imeOptions="actionNext"
                android:textColor="@color/hint_color"
                android:textColorHint="@color/hint_color"
                android:textSize="@dimen/_10sdp" />

            <EditText
                android:id="@+id/etMobile"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="left|center"
                android:hint="@string/contact_numaber"
                android:inputType="number"
                android:textColor="@color/hint_color"
                android:textColorHint="@color/hint_color"
                android:textSize="@dimen/_11sdp" />

            <TextView
                android:id="@+id/tvUserType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_2sdp"
                android:text="Select User Type"
                android:visibility="invisible"
                android:textColor="@color/transparent"
                android:textSize="@dimen/_11sdp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:background="@drawable/rounded_edttext_signup"
                android:weightSum="2">

                <LinearLayout
                    android:id="@+id/linearStudent"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_margin="1dp"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imgStudent"
                        android:layout_width="@dimen/_15sdp"
                        android:layout_height="@dimen/_15sdp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_check" />

                    <com.appstar.tutionportal.views.MyTextView
                        android:id="@+id/text_student"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/_5sdp"
                        android:gravity="center"
                        android:text="Student"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/_10sdp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearTeacher"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_margin="1dp"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imgTeacher"
                        android:layout_width="@dimen/_15sdp"
                        android:layout_height="@dimen/_15sdp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_check" />

                    <com.appstar.tutionportal.views.MyTextView
                        android:id="@+id/text_teacher"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/_5sdp"
                        android:background="@color/white"
                        android:gravity="center"
                        android:text="Teacher"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/_10sdp" />
                </LinearLayout>
            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:textColorHint="@color/white"
                    android:theme="@style/TextLabel">

                    <EditText
                        android:id="@+id/etPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white"
                        android:textSize="@dimen/_11sdp"
                        android:theme="@style/MyEditTextTheme" />
                </android.support.design.widget.TextInputLayout>

                <ImageView
                    android:layout_width="@dimen/_13sdp"
                    android:layout_height="@dimen/_13sdp"
                    android:layout_gravity="center|right"
                    android:layout_marginRight="@dimen/_18sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:src="@drawable/ic_show_password" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_19sdp"
                android:visibility="gone">

                <LinearLayout
                    android:id="@+id/llUserType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="1sp"
                        android:layout_marginLeft="@dimen/_2sdp"
                        android:layout_marginRight="@dimen/_2sdp"
                        android:layout_marginTop="@dimen/_2sdp"
                        android:background="@color/white"
                        android:visibility="gone" />
                </LinearLayout>

                <ImageView
                    android:layout_width="@dimen/_13sdp"
                    android:layout_height="@dimen/_13sdp"
                    android:layout_gravity="center|right"
                    android:layout_marginBottom="@dimen/_2sdp"
                    android:layout_marginRight="@dimen/_18sdp"
                    android:src="@drawable/ic_bottom_arrow"
                    android:visibility="gone" />

            </FrameLayout>

            <LinearLayout
                android:id="@+id/llUserDob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_24sdp"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:id="@+id/tvDob"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_2sdp"
                    android:text="Select Date of Birth"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_11sdp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="1sp"
                    android:layout_marginLeft="@dimen/_2sdp"
                    android:layout_marginRight="@dimen/_2sdp"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:background="@color/white" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_2sdp"
                android:layout_marginTop="@dimen/_19sdp"
                android:text="Gendor"
                android:textColor="@color/white"
                android:textSize="@dimen/_10sdp"
                android:textStyle="normal"
                android:visibility="gone" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:orientation="horizontal"
                android:visibility="gone">

                <RadioButton
                    android:id="@+id/radioMale"
                    style="@style/SCBSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="Male"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_10sdp"
                    android:theme="@style/SCBSwitch" />

                <RadioButton
                    android:id="@+id/radioFeMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="FeMale"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_10sdp"
                    android:theme="@style/SCBSwitch" />

                <RadioButton
                    android:id="@+id/radioOthers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Others"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_10sdp"
                    android:theme="@style/SCBSwitch" />
            </RadioGroup>

            <CheckBox
                android:id="@+id/checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:onClick="onCheckboxClicked"
                android:text="I accept terms conditions"
                android:textColor="@color/hint_color" />

            <Button
                android:id="@+id/btnCreateAccount"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/rounded_btn_green"
                android:gravity="center"
                android:text="CREATE ACCOUNT"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="@dimen/_11sdp"
                android:theme="@style/MyEditTextTheme" />

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>