<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/header_back" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/imgProfile"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_centerHorizontal="true"
                        android:layout_gravity="center"
                        android:layout_marginBottom="@dimen/_20sdp"
                        android:layout_marginTop="@dimen/_15sdp"
                        android:padding="5dp"
                        android:src="@drawable/temp_profile" />

                    <ProgressBar
                        android:id="@+id/progress"
                        android:layout_width="@dimen/_40sdp"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center"
                        android:theme="@style/AppTheme.BlueAccent" />

                </FrameLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="-45dp"
                    android:layout_marginTop="@dimen/_40sdp"
                    android:background="@drawable/ic_ringlight_white"
                    android:gravity="center"
                    android:padding="@dimen/_3sdp">

                    <ImageView
                        android:id="@+id/change_photo"
                        android:layout_width="wrap_content"
                        android:layout_height="15dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_camera" />
                </LinearLayout>
            </LinearLayout>


            <com.appstar.tutionportal.views.MyTextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="change photo"
                android:textColor="@color/colorPrimary"
                android:visibility="gone" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_9sdp"
                android:textColor="@color/grey_500"
                android:textColorHint="@color/colorPrimary"
                android:theme="@style/TextLabel_textcolor">

                <EditText
                    android:id="@+id/etName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_15sdp"
                    android:layout_marginRight="@dimen/_15sdp"
                    android:hint="@string/fname"
                    android:text="John Stero"
                    android:textColor="@color/text_color"
                    android:textColorHint="@color/colorPrimary"
                    android:textSize="@dimen/_11sdp"
                    android:theme="@style/MyEditTextTheme_Blue" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_9sdp"
                android:textColor="@color/grey_500"
                android:textColorHint="@color/colorPrimary"
                android:theme="@style/TextLabel_textcolor">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <EditText
                        android:id="@+id/etMobile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_15sdp"
                        android:layout_marginRight="@dimen/_15sdp"
                        android:editable="false"
                        android:hint="@string/contact_numaber"
                        android:text="9876543210"
                        android:textColor="@color/text_color"
                        android:textColorHint="@color/colorPrimary"
                        android:textSize="@dimen/_11sdp"
                        android:theme="@style/MyEditTextTheme_Blue" />

                    <ImageView
                        android:id="@+id/ivMobileEdit"
                        android:layout_width="@dimen/_13sdp"
                        android:layout_height="@dimen/_13sdp"
                        android:layout_gravity="right|center"
                        android:layout_marginRight="@dimen/_20sdp"
                        android:src="@drawable/ic_edit_button1" />

                </FrameLayout>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_9sdp"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                android:theme="@style/TextLabel_textcolor">

                <EditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_15sdp"
                    android:layout_marginRight="@dimen/_15sdp"
                    android:hint="@string/email"
                    android:text="Johnstero@gmail.com"
                    android:textColor="@color/text_color"
                    android:textColorHint="@color/colorPrimary"
                    android:textSize="@dimen/_11sdp"
                    android:theme="@style/MyEditTextTheme_Blue" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_dob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_9sdp"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                android:theme="@style/TextLabel_textcolor">

                <EditText
                    android:id="@+id/tvDob"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_15sdp"
                    android:layout_marginRight="@dimen/_15sdp"
                    android:hint="Select Date Of  Birth"
                    android:text="Johnstero@gmail.com"
                    android:textColor="@color/text_color"
                    android:textColorHint="@color/colorPrimary"
                    android:textSize="@dimen/_11sdp"
                    android:theme="@style/MyEditTextTheme_Blue" />

            </android.support.design.widget.TextInputLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_9sdp"
                android:text="Gender"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_12sdp"
                android:textStyle="normal" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_marginRight="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_9sdp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioMale"
                    style="@style/SCBSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="Male"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_10sdp"
                    android:theme="@style/SCBSwitch" />

                <RadioButton
                    android:id="@+id/radioFeMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Female"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_10sdp"
                    android:theme="@style/SCBSwitch" />

                <RadioButton
                    android:id="@+id/radioOthers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Others"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_10sdp"
                    android:theme="@style/SCBSwitch" />
            </RadioGroup>

            <Button
                android:id="@+id/btnCreateAccount"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="@dimen/_30sdp"
                android:layout_marginRight="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/ic_editprofile_btn"
                android:text="SAVE"
                android:textColor="@color/colorPrimary" />


        </LinearLayout>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>


